@@ -1,7 +1,7 @@
 /* defun.h -- declaration for defuns.
    $Id$
 
-   Copyright (C) 1999 Free Software Foundation, Inc.
+   Copyright (C) 1999, 2005 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
 
 #include "insertion.h"
 
-extern enum insertion_type get_base_type (int type);
+extern enum insertion_type get_base_type (enum insertion_type);
 extern void cm_defun (void);
 
 #endif /* !DEFUN_H */
